--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         z-index: 10;
       }
     </style>
-    <script type="module" crossorigin src="/assets/index.788b55c9.js"></script>
-    <link rel="stylesheet" href="/assets/index.4b7596af.css">
+    <script type="module" crossorigin src="/FinalCv/assets/index.788b55c9.js"></script>
+    <link rel="stylesheet" href="/FinalCv/assets/index.bd43377a.css">
   </head>
   <body>
     <!-- Root Element for React/Vite -->
